--- a/style.css
+++ b/style.css
@@ -265,6 +265,76 @@ nav ul li a:hover::after {
     background: #0dc4b1;
 }
 
+/*************CONTACT***************/
+.contact-left{
+    flex-basis: 30%;
+}
+.contact-right{
+    flex-basis: 60%;
+}
+
+.caontact-left p{
+    margin-top: 30px;
+}
+.contact-left p i{
+    color: #0dc4b1;
+    margin-right: 15px;
+    font-size: 25px;
+}
+.contact-left .contact-links{
+    text-decoration: none;
+    margin-right: 15px;
+    color: #ababab;
+    font-size: 20px;
+}
+.social-icons{
+    margin-top: 30px;
+}
+.social-icons a{
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: #ababab;
+    display: inline-block;
+    transition: transform 0.5s; 
+}
+.social-icons a:hover{
+    color: #0dc4b1;
+    transform: translateY(-5px);
+}
+.btn.btn2{
+    display: inline-block;
+    background: #0dc4b1;
+}
+.contact-right form{
+    width: 100%;
+}
+form input, form textarea{
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #262626;
+    padding: 15px;
+    margin: 15px 0;
+    color: white;
+    font-size: 18px;
+    border-radius: 6px;
+}
+form .btn2{
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
+}
+.copyright{
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background: #262626;
+    font-weight: 300;
+    font-size: 20px;
+}
+
+
 
 
 
@@ -274,7 +344,7 @@ nav .fa-solid{
 }
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(mobile.jpg);
+        background-image: url(IMAGES/mobile.jpg);
     }
     .header-text{
         margin-top: 45%;
@@ -323,5 +393,10 @@ nav .fa-solid{
     .tab-links{
         font-size: 16px;
         margin-right: 20px;
+        padding: 14px 60px;
+        cursor: pointer;
+    }
+    .contact-left, .contact-right{
+        flex-basis: 100%;
     }
 }
