--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ nav ul li a:hover::after {
 }
 
 .about-col-1 img{
+    flex-basis: 35%;
     width: 100%;
     border-radius: 15px;
 }
@@ -381,19 +382,18 @@ nav .fa-solid{
     .subtitle{
         font-size: 40px;
     }
-    .about-col-1, .about-col-2{
-        flex-basis: 100%;
-    }
     .about-col-1{
         margin-bottom: 30px;
+        flex-basis: 100%;
     }
     .about-col-2{
         font-size: 14px;
+        width: 100%;
     }
     .tab-links{
         font-size: 16px;
         margin-right: 20px;
-        padding: 14px 60px;
+        padding: 14px 40px;
         cursor: pointer;
     }
     .contact-left, .contact-right{
